# ardos

./: .gitignore  .gitmodules  AGENTS.md  ardos.code-workspace  external-mappings.nix  flake.nix  justfile  limine.conf  manifest.toml  vm.just
.cargo/: config.toml
.github/workflows/: build.yml
initrd/src/: main.rs  proc.rs
kernel/: .config  kernelconfig.nix  modules.nix  vendor-deps.sh
modules/morula/: Cargo.toml  build.rs  init.midl
modules/morula/src/: main.rs
ring0/.cargo/: config.toml
ring0/registry/client/: Cargo.toml
ring0/registry/client/src/: lib.rs  main.rs
ring0/registry/protocol/: Cargo.toml
ring0/registry/protocol/src/: lib.rs
ring0/registry/registrym/: AGENTS.md  Cargo.toml
ring0/registry/registrym/src/: lib.rs  module.rs  registry_device.rs
scripts/: fakeroot-sysroot.sh  post-process-sysroot.sh
