[package]
name = "registrym-protocol"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[dependencies]
postcard = { version = "1.0", default-features = false }
serde = { git = "https://github.com/coffeeispower/serde", default-features = false, features = ["derive"] }

[features]
std = ["postcard/default"]